improved the log

--- a/gen_php_code.vcxproj.filters
+++ b/gen_php_code.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="Util.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="IGenFile.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="GenLoginFile.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="gen_php_code.cpp">
@@ -60,6 +66,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Util.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="IGenFile.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GenLoginFile.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
