--- a/gen_php_code.vcxproj
+++ b/gen_php_code.vcxproj
@@ -100,8 +100,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DBOperation.h" />
+    <ClInclude Include="GenLoginFile.h" />
     <ClInclude Include="gen_php_code.h" />
     <ClInclude Include="gen_php_codeDlg.h" />
+    <ClInclude Include="IGenFile.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -109,8 +111,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DBOperation.cpp" />
+    <ClCompile Include="GenLoginFile.cpp" />
     <ClCompile Include="gen_php_code.cpp" />
     <ClCompile Include="gen_php_codeDlg.cpp" />
+    <ClCompile Include="IGenFile.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
